--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <meta name="description" content="the solution to 3 column preview card component challenge from frontend mentor" />
+  <meta name="keywords" content="the3 column preview card component, frontend mentor, challenge, flexbox, grid" />
+  <meta name="author" content="Frontend Mentor, Iuliia Konovalova" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <title>Frontend Mentor | 3-column preview card component</title>
 
