--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
       font-size: 11px;
@@ -39,11 +38,21 @@
   Luxury
   Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
   rental and arrive in style.
+  <!--Footer-->
+  <footer>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <!--Credits-->
+    <div class="attribution">
+      <div class="credits_frontend-mentor">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener" target="_blank">Frontend
+          Mentor</a>.
+      </div>
+      <div class="">
+        Coded by <a href="https://github.com/IuliiaKonovalova" rel="noopener" target="_blank">Iulia Konovalova</a>.
+      </div>
+    </div>
+
+  </footer>
 </body>
 
 </html>
