Add markdown for the main content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
 </head>
 
 <body>
-
+  <main class="main__container">
+    <section class="outline section-1">
+      <div class="image__holder"></div>
+      <h1 class="section__title"></h1>
+      <p class="section__description"></p>
+      <div class="btn">Learn More</div>
+    </section>
+    <section class="outline section-2">
+      <div class="image__holder"></div>
+      <h1 class="section__title"></h1>
+      <p class="section__description"></p>
+      <div class="btn">Learn More</div>
+    </section>
+    <section class="outline section-3">
+      <div class="image__holder image__sedan"></div>
+      <h1 class="section__title"></h1>
+      <p class="section__description"></p>
+      <div class="btn">Learn More</div>
+    </section>
+  </main>
   Sedans
   Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
   or on your next road trip.
