--- a/index.html
+++ b/index.html
@@ -29,35 +29,32 @@
   <main class="main__container">
     <section class="outline section-1">
       <div class="image__holder"></div>
-      <h1 class="section__title"></h1>
-      <p class="section__description"></p>
+      <h1 class="section__title">Sedans</h1>
+      <p class="section__description">
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+        or on your next road trip.
+      </p>
       <div class="btn">Learn More</div>
     </section>
     <section class="outline section-2">
       <div class="image__holder"></div>
-      <h1 class="section__title"></h1>
-      <p class="section__description"></p>
+      <h1 class="section__title">SUVs</h1>
+      <p class="section__description">
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+        and off-road adventures.
+      </p>
       <div class="btn">Learn More</div>
     </section>
     <section class="outline section-3">
       <div class="image__holder image__sedan"></div>
-      <h1 class="section__title"></h1>
-      <p class="section__description"></p>
+      <h1 class="section__title">Luxury</h1>
+      <p class="section__description">
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+        rental and arrive in style.
+      </p>
       <div class="btn">Learn More</div>
     </section>
   </main>
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-  rental and arrive in style.
-
   <!--Footer-->
   <footer>
 
