Add car images to each section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <body>
   <main class="main__container">
     <section class="outline section-1">
-      <div class="image__holder"></div>
+      <div class="image__holder">
+        <img src="assets/images/icon-sedans.svg" alt="icon-sedans">
+      </div>
       <h1 class="section__title">Sedans</h1>
       <p class="section__description">
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
@@ -37,7 +39,9 @@
       <div class="btn">Learn More</div>
     </section>
     <section class="outline section-2">
-      <div class="image__holder"></div>
+      <div class="image__holder">
+        <img src="assets/images/icon-suvs.svg" alt="icon-suvs">
+      </div>
       <h1 class="section__title">SUVs</h1>
       <p class="section__description">
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
@@ -46,7 +50,9 @@
       <div class="btn">Learn More</div>
     </section>
     <section class="outline section-3">
-      <div class="image__holder image__sedan"></div>
+      <div class="image__holder image__sedan">
+        <img src="assets/images/icon-luxury.svg" alt="icon-luxury">
+      </div>
       <h1 class="section__title">Luxury</h1>
       <p class="section__description">
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
