Add comments to the html code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 </head>
 
 <body>
+
+  <!--Main section-->
   <main class="main__container">
+
+    <!--Section 1-->
     <section class="outline section-1">
       <div class="image__holder">
         <img src="assets/images/icon-sedans.svg" alt="icon-sedans">
@@ -38,6 +42,8 @@
       </p>
       <div class="btn">Learn More</div>
     </section>
+
+    <!--Section 2-->
     <section class="outline section-2">
       <div class="image__holder">
         <img src="assets/images/icon-suvs.svg" alt="icon-suvs">
@@ -49,6 +55,8 @@
       </p>
       <div class="btn">Learn More</div>
     </section>
+
+    <!--Section 3-->
     <section class="outline section-3">
       <div class="image__holder image__sedan">
         <img src="assets/images/icon-luxury.svg" alt="icon-luxury">
