--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
   </main>
   <!--Footer-->
-  <footer>
+  <footer class="footer">
 
     <!--Credits-->
     <div class="attribution">
