--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.
       </p>
-      <div class="btn">Learn More</div>
+      <div class="btn__holder">
+        <div class="btn">learn more</div>
+      </div>
     </section>
 
     <!--Section 2-->
@@ -53,7 +55,9 @@
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.
       </p>
-      <div class="btn">Learn More</div>
+      <div class="btn__holder">
+        <div class="btn">learn more</div>
+      </div>
     </section>
 
     <!--Section 3-->
@@ -66,7 +70,9 @@
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.
       </p>
-      <div class="btn">Learn More</div>
+      <div class="btn__holder">
+        <div class="btn">learn more</div>
+      </div>
     </section>
   </main>
   <!--Footer-->
