--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main class="main__container">
 
     <!--Section 1-->
-    <section class="outline section-1">
+    <section class="section section-1">
       <div class="image__holder">
         <img src="assets/images/icon-sedans.svg" alt="icon-sedans">
       </div>
@@ -46,7 +46,7 @@
     </section>
 
     <!--Section 2-->
-    <section class="outline section-2">
+    <section class="section section-2">
       <div class="image__holder">
         <img src="assets/images/icon-suvs.svg" alt="icon-suvs">
       </div>
@@ -61,7 +61,7 @@
     </section>
 
     <!--Section 3-->
-    <section class="outline section-3">
+    <section class="section section-3">
       <div class="image__holder image__sedan">
         <img src="assets/images/icon-luxury.svg" alt="icon-luxury">
       </div>
