Add styling to the btns

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         or on your next road trip.
       </p>
       <div class="btn__holder">
-        <div class="btn">learn more</div>
+        <div class="btn btn-1">learn more</div>
       </div>
     </section>
 
@@ -56,7 +56,7 @@
         and off-road adventures.
       </p>
       <div class="btn__holder">
-        <div class="btn">learn more</div>
+        <div class="btn btn-2">learn more</div>
       </div>
     </section>
 
@@ -71,7 +71,7 @@
         rental and arrive in style.
       </p>
       <div class="btn__holder">
-        <div class="btn">learn more</div>
+        <div class="btn btn-3">learn more</div>
       </div>
     </section>
   </main>
